# undergrad-projects

./: README.md
Cleaning_Robot_Sim_CMSC322/: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  dependencies.cmake
Cleaning_Robot_Sim_CMSC322/.cache/clangd/index/: hello.cpp.677E079F8F67B8B5.idx  hello.hpp.7F8A12B83D15D9B7.idx  robot.cpp.F1CB81DDDB14F705.idx  room.cpp.6512F7433A6851F0.idx  room.hpp.603365D5FB88F656.idx  roomMain.cpp.8A3EE4406BF0B063.idx  say_hello.cpp.BD5D9757C14A292B.idx
Cleaning_Robot_Sim_CMSC322/app/: APP.md  CMakeLists.txt  User_Interface.cpp  roomMain.cpp  say_hello.cpp
Cleaning_Robot_Sim_CMSC322/cmake/: get_cpm.cmake
Cleaning_Robot_Sim_CMSC322/docs/: README.md  SPRINT_REVIEW.md  STANDUP.md
Cleaning_Robot_Sim_CMSC322/docs/design/: DESIGN.md
Cleaning_Robot_Sim_CMSC322/docs/user-guide/: USER_GUIDE.md
Cleaning_Robot_Sim_CMSC322/include/: INCLUDE.md
Cleaning_Robot_Sim_CMSC322/include/libhello/: hello.hpp
Cleaning_Robot_Sim_CMSC322/include/librms/: RMS.hpp
Cleaning_Robot_Sim_CMSC322/include/librobot/: robot.h
Cleaning_Robot_Sim_CMSC322/include/libroom/: room.hpp
Cleaning_Robot_Sim_CMSC322/input/: config.yaml
Cleaning_Robot_Sim_CMSC322/output/: robot_log.txt  room_count.csv  simulationInput.csv  visual_simulation.py
Cleaning_Robot_Sim_CMSC322/src/: RMS.cpp  SRC.md  datalog_and_robotLocation_demo.cpp  hello.cpp  output  prob_failure_simulation.cpp  read_input.cpp  robot.cpp  room.cpp
Cleaning_Robot_Sim_CMSC322/tests/: CMakeLists.txt  TESTS.md  rms_test.cpp  robot_test.cpp  room_test.cpp  test.cpp
(+50 files in other folders)
